# gym-softrobot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: conf.py  design.md  index.rst  requirements.txt
docs/envs/: design.md  misc.md  octopus.md  soft_arm.md  wrappers.rst
gym_softrobot/: __init__.py  config.py
gym_softrobot/debug/: make.py  registry.py  render.py
gym_softrobot/envs/: __init__.py
gym_softrobot/envs/octopus/: __init__.py  arm_push_env.py  arm_single_env.py  arm_two_env.py  build.py  build_muscle_octopus.py  controllable_constraint.py  crawl_env.py  flat_3d_env.py  flat_env.py  hunt_env.py  reach_env.py  swim_env.py
gym_softrobot/envs/simple_control/: README.md  __init__.py  inertial_pull.py
gym_softrobot/envs/snake/: __init__.py  continuum_snake.py
gym_softrobot/envs/soft_arm/: __init__.py  soft_arm_tracking.py  train_code.py
gym_softrobot/envs/soft_arm_tracking/: soft_arm.py  soft_arm_bck.py
gym_softrobot/envs/soft_arm_tracking/MuscleTorquesWithBspline/: muscle_torques_with_bspline.py
gym_softrobot/envs/soft_pendulum/: __init__.py  build.py  soft_pendulum.py
gym_softrobot/utils/: callback_func.py  intersection.py  linalg.py
gym_softrobot/utils/actuation/: callback_func.py  frame_tools.py  rod_tools.py
gym_softrobot/utils/actuation/actuations/: __init__.py  actuation.py
gym_softrobot/utils/actuation/algorithms/: __init__.py  algorithm.py  forward_backward.py  forward_backward_muscle.py  smoothing_algorithm2.py
gym_softrobot/utils/custom_elastica/: callback_func.py  constraint.py  custom_joint.py  joint.py
gym_softrobot/utils/render/: base_renderer.py  default.inc  matplotlib_renderer.py  post_processing.py  povray_renderer.py  povray_rendering.py  pyglet_rendering.py
gym_softrobot/wrapper/: __init__.py  pymarl_env_wrapper.py  wrapper_shared_policy_MAenv.py
run_script/: README.md  env_make.py  env_moviepy.py  env_render.py  eval_DecPPO_OctoFlat.py  registry_id.py  requirements.txt  train_DecPPO_OctoFlat.py  train_PPO_snake.py  vapory_test.py
run_script/DecPPO/: custom_decppo.py  custom_ppo.py
run_script/marl/: dec_ppo.py
run_test/: make_test.py
tests/: test_dependencies.py
tests/envs/: spec_list.py  test_action_dim_check.py  test_determinism.py  test_envs.py  test_render.py
(+16 files in other folders)
